<resources>
    <string name="app_name">GymPass</string>
    <string name="UserType">User Type</string>
    <string name="addUserType">Add</string>
    <string name="viewAllUserTypes">View All</string>
    <string name="id">ID</string>
    <string name="type">Type</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="adauga">Adauga</string>
    <string name="actualizeaza">Actualizeaza</string>
    <string name="sterge">Sterge</string>
    <string name="tip">Tip</string>
    <string name="tip_de_utilizator">Tip de utilizator</string>
    <string name="open">Deschide</string>
    <string name="close">Inchide</string>
    <string name="subscription_type">Tip de abonament</string>
    <string name="subscription_description">Descriere abonament</string>
    <string name="abonamente">Abonamente</string>
    <string name="abonament">Abonament</string>
    <string name="tip_de_abonament">Tip de abonament</string>
    <string name="descriere_abonament">Descriere abonament</string>
    <string name="descriere">Descriere</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="admin">Admin</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="data_nasterii">Data nasterii</string>
    <string name="sali">Sali</string>
    <string name="antrenori">Antrenori</string>
    <string name="telefon">Telefon</string>
    <string name="clienti">Clienti</string>
    <string name="sali_si_detalii">Sali si detalii</string>
    <string name="detalii">Detalii</string>
    <string name="autentificare">Autentificare</string>
    <string name="create_account">Nu ai cont? Creeaza-ti unul aici</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="creeaza_cont">Creeaza cont</string>
    <string name="confirmare_parola">Confirmare parola</string>
    <string name="mandatory">Campul este obligatoriu!</string>
    <string name="harta_sali">Harta sali</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gym_map">GymMap</string>
    <string name="ora_deschidere">Ora deschidere</string>
    <string name="ora_inchidere">Ora inchidere</string>
    <string name="strada">Strada</string>
    <string name="numar">Numar</string>
    <string name="oras">Oras</string>
    <string name="judet">Judet</string>
    <string name="latitudine">Latitudine</string>
    <string name="longitudine">Longitudine</string>
    <string name="clase">Clase</string>
    <string name="acces_general">Acces general</string>
    <string name="profil">Profil</string>
    <string name="rezervare">Rezervare</string>
    <string name="abonament_activ">Abonament activ</string>
    <string name="rezervari">Rezervari</string>
    <string name="adrese">Adrese:</string>
    <string name="url_imagine">URL imagine</string>
    <string name="adauga_adresa">Adauga adresa</string>
    <string name="pret">Pret</string>
    <string name="denumire">Denumire</string>
    <string name="data">Data</string>
    <string name="ora">Ora</string>
    <string name="antrenor">Antrenor</string>
    <string name="vezi_sala">Vezi sala</string>
    <string name="rezerva_clasa">Rezerva-ti locul la clasa</string>
    <string name="durata">Durata</string>
    <string name="cumpara_abonament">Cumpara abonament</string>
    <string name="abonamentul_tau">Abonamentul tau</string>
</resources>